--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+require: rubocop-rspec
+
 AllCops:
   TargetRubyVersion: 2.5
   Exclude:
@@ -22,4 +24,11 @@ Style/ClassAndModuleChildren:
   Enabled: false
 
 Style/AccessModifierDeclarations:
+  Enabled: false
+
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*.rb
+
+RSpec/ExampleLength:
   Enabled: false
