implement sc:billing:stipe:sync_plans task

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,3 +37,7 @@ RSpec/ExampleLength:
 RSpec/DescribeClass:
   Exclude:
     - spec/lib/tasks/**/*.rb
+
+RSpec/MultipleDescribes:
+  Exclude:
+    - spec/lib/tasks/**/*.rb
