--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,8 @@ require: rubocop-rspec
 AllCops:
   TargetRubyVersion: 2.5
   Exclude:
-    - 'spec/dummy/**/*'
+    - spec/dummy/**/*
+    - vendor/**/*
 
 Style/Documentation:
   Enabled: false
