--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -6,19 +6,15 @@
 #
 default: &default
   adapter: postgresql
+  url: <%= ENV.fetch('DATABASE_URL') %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  host: db
-  username: postgres
-  password: 
 
 development:
   <<: *default
-  database: sc_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: sc_test
