--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - pg-data:/var/lib/postgresql/data
 
   app: &app
-    image: startupcraftio/ruby:2.5
+    build:
+      context: .
     command: bash
     volumes:
       - .:/app
